# unit-text

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  idea.bak.toml  pyproject.toml
.github/workflows/: publish.yaml  verify.yaml
docs/: USAGE.md
src/unit_text/: __init__.py  __main__.py  cli.py  models.py  settings.py
tests/fixtures/this-post/: 01.md  02.md  03.md  unit-text.json
