[project]
name = "unit-text"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Giorgio Azzinnaro", email = "giorgio@azzinna.ro" }
]
requires-python = ">=3.13"
dependencies = [
    "smolagents>=1.8.1",
    "typer>=0.15.1",
]

[project.scripts]
unit-text = "unit_text:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "commitizen>=4.1.1",
    "pre-commit>=4.1.0",
    "ruff>=0.9.4",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
annotated_tags = true
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
